src/app/modules/search/search.component.scss
.search-wrapper {
  height: 100%;
  display: grid;
  grid-template-rows: max-content auto max-content;

  main {
    margin: 0 1rem;

    .breadcumbs {
      margin: 2rem auto;
      width: fit-content;
    }

    h2 {
      font-weight: 400;
      font-size: 22px;
    }

    small {
      display: block;
      max-width: 542px;
      font-size: 11px;
      color: var(--text-secondary);
      margin-top: 0.25rem;
    }

    form {
      display: flex;
      align-items: end;
      gap: 1rem;
      margin-top: 1rem;

      .spinner {
        display: block;
        width: 2rem;
        height: 2.25rem;
        display: flex;
        align-items: center;

        i {
          font-size: 1rem;
          animation: spinner 1s linear infinite;
        }
      }
    }

    .error-message {
      background: var(--error-bg);
      color: var(--error-text);
      width: fit-content;
      padding: 0.25rem 0.5rem;
      margin-top: 0.5rem;
    }

    .cards {
      margin-top: 2rem;
      display: flex;
      gap: 1rem;
    }
  }

  footer {
    padding: 1rem;
    background: var(--secondary);
    display: flex;
    gap: 1rem;
  }
}

@keyframes spinner {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

